<resources>
    <string name="app_name">Calculator</string>
    <string name="square">x<sup>y</sup></string>
    <string name="current">current</string>
    <string name="previous">previous</string>
    <string name="ac">Ac</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="del">del</string>
    <string name="exp">e</string>
    <string name="log">log</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="ln">ln</string>
</resources>